--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap-grid.min.css";
+
+section {
+  height: auto !important;
+  padding: 120px 0 !important;
+  min-height: auto !important;
+}
