feat: add careers and job listing page

--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -195,7 +195,7 @@
             Take your career to next level, <br />
             join our team
           </h2>
-          <a href="javascript:void(0)" class="btn-white-border"
+          <a [routerLink]="['/careers']" class="btn-white-border"
             >See openings →</a
           >
         </div>
