--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -25,10 +25,196 @@
   </div>
 </section>
 
+<!-- ************************** Recent Project ********************** -->
+<section class="slide-project">
+  <span class="img-bg-1">
+    <img src="../../assets/images/slide-round.svg" class="img-fluid" alt="" />
+    <img src="../../assets/images/circle.svg" class="img-fluid" alt="" />
+  </span>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="slide-inner">
+          <h4 class="text-white text-center">RECENT PROJECTS</h4>
+          <!-- Swiper -->
+          <div class="swiper-container gallery-thumbs">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  src="../../assets/images/project1.png"
+                  class="img-fluid W-100"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="../../assets/images/project2.png"
+                  class="img-fluid W-100"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="../../assets/images/project3.png"
+                  class="img-fluid W-100"
+                  alt=""
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="../../assets/images/project4.png"
+                  class="img-fluid W-100"
+                  alt=""
+                />
+              </div>
+            </div>
+          </div>
+          <div class="swiper-container gallery-top mt-5">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="swiper-slide-inner">
+                  <div class="row align-items-center">
+                    <div class="col-md-6">
+                      <img
+                        src="../../assets/images/main-project1.png"
+                        class="img-fluid W-100"
+                        alt=""
+                      />
+                    </div>
+                    <div class="col-md-6">
+                      <div class="slide-content">
+                        <h2 class="text-white">
+                          <strong
+                            >Lorem ipsum dolor sit amet, consectetur</strong
+                          >
+                        </h2>
+                        <p class="text-white my-5">
+                          Lorem ipsum, dolor sit amet consectetur adipisicing
+                          elit. Qui voluptatibus sapiente distinctio inventore
+                          ratione recusandae officia quasi vero esse nisi aut,
+                          dolores repudiandae est voluptatum, amet soluta
+                          laborum fuga voluptas?
+                        </p>
+                        <a href="javascript:void(0)" class="btn btn-border"
+                          >Read More →</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper-slide-inner">
+                  <div class="row align-items-center">
+                    <div class="col-md-6">
+                      <img
+                        src="../../assets/images/main-project1.png"
+                        class="img-fluid W-100"
+                        alt=""
+                      />
+                    </div>
+                    <div class="col-md-6">
+                      <div class="slide-content">
+                        <h2 class="text-white">
+                          <strong
+                            >Lorem ipsum dolor sit amet, consectetur</strong
+                          >
+                        </h2>
+                        <p class="text-white my-5">
+                          Lorem ipsum, dolor sit amet consectetur adipisicing
+                          elit. Qui voluptatibus sapiente distinctio inventore
+                          ratione recusandae officia quasi vero esse nisi aut,
+                          dolores repudiandae est voluptatum, amet soluta
+                          laborum fuga voluptas?
+                        </p>
+                        <a href="javascript:void(0)" class="btn btn-border"
+                          >Read More →</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper-slide-inner">
+                  <div class="row align-items-center">
+                    <div class="col-md-6">
+                      <img
+                        src="../../assets/images/main-project1.png"
+                        class="img-fluid W-100"
+                        alt=""
+                      />
+                    </div>
+                    <div class="col-md-6">
+                      <div class="slide-content">
+                        <h2 class="text-white">
+                          <strong
+                            >Lorem ipsum dolor sit amet, consectetur</strong
+                          >
+                        </h2>
+                        <p class="text-white my-5">
+                          Lorem ipsum, dolor sit amet consectetur adipisicing
+                          elit. Qui voluptatibus sapiente distinctio inventore
+                          ratione recusandae officia quasi vero esse nisi aut,
+                          dolores repudiandae est voluptatum, amet soluta
+                          laborum fuga voluptas?
+                        </p>
+                        <a href="javascript:void(0)" class="btn btn-border"
+                          >Read More →</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper-slide-inner">
+                  <div class="row align-items-center">
+                    <div class="col-md-6">
+                      <img
+                        src="../../assets/images/main-project1.png"
+                        class="img-fluid W-100"
+                        alt=""
+                      />
+                    </div>
+                    <div class="col-md-6">
+                      <div class="slide-content">
+                        <h2 class="text-white">
+                          <strong
+                            >Lorem ipsum dolor sit amet, consectetur</strong
+                          >
+                        </h2>
+                        <p class="text-white my-5">
+                          Lorem ipsum, dolor sit amet consectetur adipisicing
+                          elit. Qui voluptatibus sapiente distinctio inventore
+                          ratione recusandae officia quasi vero esse nisi aut,
+                          dolores repudiandae est voluptatum, amet soluta
+                          laborum fuga voluptas?
+                        </p>
+                        <a href="javascript:void(0)" class="btn btn-border"
+                          >Read More →</a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- ****************************We offer  *************************** -->
 
 <section class="we-offre">
-  <img src="assets/images/we-offer-icon1.svg" class="img-fluid off2" alt="" />
+  <img
+    src="../../assets/images/we-offer-icon1.svg"
+    class="img-fluid off2"
+    alt=""
+  />
   <div class="container">
     <div class="row">
       <div class="col-md-5 col-lg-4">
@@ -50,7 +236,11 @@
           <ul>
             <li>
               <div class="services-offer">
-                <img src="assets/images/web-dev.svg" class="img-fluid" alt="" />
+                <img
+                  src="../../assets/images/web-dev.svg"
+                  class="img-fluid"
+                  alt=""
+                />
                 <h3>
                   Web <br />
                   Developement
@@ -61,7 +251,7 @@
             <li>
               <div class="services-offer">
                 <img
-                  src="assets/images/mobile-app.svg"
+                  src="../../assets/images/mobile-app.svg"
                   class="img-fluid"
                   alt=""
                 />
