--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -217,9 +217,9 @@
   />
   <div class="container">
     <div class="row">
-      <div class="col-md-5 col-lg-4">
+      <div class="col-md-5 col-lg-5">
         <div class="we-offer-inner">
-          <h5><small>WE OFFER</small></h5>
+          <h5><small>WE OFFERS</small></h5>
           <h2>
             <strong>Expert <span>Services</span></strong>
           </h2>
@@ -358,7 +358,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="tts">
           <h2>
             Why work <br />
@@ -366,7 +366,7 @@
           </h2>
         </div>
       </div>
-      <div class="col-md-9">
+      <div class="col-md-8">
         <div class="tts">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -381,7 +381,7 @@
       </div>
     </div>
     <div class="row justify-content-end">
-      <div class="col-md-9">
+      <div class="col-md-8">
         <div class="tts">
           <ul>
             <li>
@@ -508,215 +508,9 @@
     </div>
   </div>
 </section>
-<!-- <section class="numbers">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="numbers-title">
-          <h5>
-            <small>VENTONIX IN NUMBERS</small>
-          </h5>
-          <h2>
-            Since years we have put in our hard work and dedication to excell
-            our client’s expectations. Here are just few stats.
-          </h2>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
 
-<!-- <section class="work-with-us">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="work-with-inner">
-          <ul id="counter">
-            <li>
-              <span class="count percent" data-count="90"> 0 </span>
-              <span>%</span>
-              <p>Customer Satisfaction</p>
-            </li>
-            <li>
-              <span class="count percent" data-count="55"> 0 </span>
-              <span>+</span>
-              <p>Projects</p>
-            </li>
-            <li>
-              <span class="count percent" data-count="8"> 0 </span
-              ><span>+</span>
-              <p>Employees</p>
-            </li>
-            <li>
-              <span class="count percent" data-count="10"> 0 </span
-              ><span>+</span>
-              <p>Technologies</p>
-            </li>
-            <li>
-              <span class="count percent" data-count="40"> 0 </span
-              ><span>+</span>
-              <p>Customers</p>
-            </li>
-            <li>
-              <span class="count percent" data-count="2"> 0 </span>
-              <p>Offices</p>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-3">
-        <div class="tts">
-          <h2>
-            Why work <br />
-            with us?
-          </h2>
-        </div>
-      </div>
-      <div class="col-md-9">
-        <div class="tts">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat. Duis aute irure dolor in
-            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-            culpa qui officia deserunt mollit anim id est laborum.
-          </p>
-        </div>
-      </div>
-    </div>
-    <div class="row justify-content-end">
-      <div class="col-md-9">
-        <div class="tts">
-          <ul>
-            <li>
-              <div class="icons">
-                <img src="assets/images/icon1.svg" class="img-fluid" alt="" />
-              </div>
-              <div class="content">
-                <h2>Dedicated Resources</h2>
-                <p>Every project is backed with real working humans</p>
-              </div>
-            </li>
-            <li>
-              <div class="icons">
-                <img src="assets/images/icon1.svg" class="img-fluid" alt="" />
-              </div>
-              <div class="content">
-                <h2>Perfection</h2>
-                <p>All our work is quality tested for high quality</p>
-              </div>
-            </li>
-            <li>
-              <div class="icons">
-                <img src="assets/images/icon1.svg" class="img-fluid" alt="" />
-              </div>
-              <div class="content">
-                <h2>On-time Delivery</h2>
-                <p>Your time is precious. We understand it!</p>
-              </div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-<!-- 
-<section class="review">
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <div class="title">
-          <h2>What our client says</h2>
-          <div class="swiper-container review12">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="rw-inner">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  </p>
-                </div>
-                <h3>Erin Wilson</h3>
-                <small>Marketing Manager</small>
-              </div>
-              <div class="swiper-slide">
-                <div class="rw-inner">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  </p>
-                </div>
-                <h3>Erin Wilson</h3>
-                <small>Marketing Manager</small>
-              </div>
-              <div class="swiper-slide">
-                <div class="rw-inner">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  </p>
-                </div>
-                <h3>Erin Wilson</h3>
-                <small>Marketing Manager</small>
-              </div>
-              <div class="swiper-slide">
-                <div class="rw-inner">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  </p>
-                </div>
-                <h3>Erin Wilson</h3>
-                <small>Marketing Manager</small>
-              </div>
-              <div class="swiper-slide">
-                <div class="rw-inner">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  </p>
-                </div>
-                <h3>Erin Wilson</h3>
-                <small>Marketing Manager</small>
-              </div>
-              <div class="swiper-slide">
-                <div class="rw-inner">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                    do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                  </p>
-                </div>
-                <h3>Erin Wilson</h3>
-                <small>Marketing Manager</small>
-              </div>
-            </div>
-            <!-- Add Pagination -->
-<!-- <div class="swiper-pagination"></div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>  -->
-
-<!-- <section class="lts">
+<!-- **************************lets start your project**************** -->
+<section class="lts">
   <div class="container">
     <div class="row">
       <div class="col-md-12">
@@ -729,4 +523,4 @@
       </div>
     </div>
   </div>
-</section> -->
+</section>
