--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -4,11 +4,13 @@
   min-height: calc(100vh - 147px);
   display: flex;
   align-items: center;
+  padding: 90px 0;
   .hero-inner {
+    margin: 50px 0 0;
     h1 {
       font-size: 65px;
       font-weight: 800;
-      line-height: 79px;
+      line-height: 70px;
       letter-spacing: 1px;
       color: $dark-black;
       text-transform: capitalize;
@@ -17,8 +19,8 @@
       font-style: normal;
       font-weight: normal;
       font-size: 20px;
-      line-height: 30px;
-      margin: 40px 0;
+      line-height: 25px;
+      margin: 0px 0 25px;
       color: #262332;
       opacity: 0.5;
     }
@@ -78,9 +80,12 @@
   align-items: center;
   justify-content: center;
   background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
-  padding: 60px 0;
+  padding: 180px 0;
   position: relative;
   z-index: 1;
+  h4 {
+    margin-bottom: 39px;
+  }
   a.btn.btn-border {
     color: #fff;
     border: 1px solid #fff;
@@ -116,11 +121,15 @@
     position: absolute;
     right: 150px;
   }
+  .gallery-top {
+    margin: 92px 0 33px 0 !important;
+  }
 }
+
 .we-offre {
   position: relative;
   z-index: 1;
-  padding: 60px 0;
+  padding: 180px 0 0 0;
   margin-bottom: 60px;
   .we-offer-inner {
     h5 {
@@ -144,7 +153,7 @@
       color: #262332;
       font-size: 20px;
       font-weight: 400;
-      line-height: 30px;
+      line-height: 26px;
     }
   }
   .we-offer-inner1 {
@@ -176,8 +185,9 @@
           a {
             color: #262332;
             font-size: 18px;
-            font-weight: 400;
-            line-height: 22px;
+            font-weight: 700;
+            line-height: 21px;
+            border-bottom: 2px solid #0aa7f4;
           }
         }
       }
@@ -195,10 +205,11 @@
   }
 }
 .numbers {
-  padding: 60px 0;
+  padding: 120px 0;
   .numbers-title {
     h5 {
       text-align: center;
+      margin-bottom: 52px;
       small {
         background: $primary-gradient;
         -webkit-background-clip: text !important;
@@ -212,7 +223,7 @@
       font-size: 45px;
       font-weight: 800;
       margin: 0 auto;
-      line-height: 60px;
+      line-height: 52px;
       max-width: 800px;
       text-align: center;
       letter-spacing: 1px;
@@ -222,11 +233,12 @@
 }
 .work-with-us {
   background-image: url(../../../assets/images/wwu.svg);
-  background-size: cover;
+  background-size: contain;
   background-repeat: no-repeat;
   min-height: 100vh;
-  padding: 60px;
+  padding: 60px 60px 107px 60px;
   background-position: bottom;
+  background-color: whitesmoke;
   .work-with-inner {
     border-radius: 10px;
     background: linear-gradient(135deg, #009eff 0%, #30ccc6 100%);
@@ -262,18 +274,21 @@
     }
   }
   .tts {
+    // margin-top: 100px;
     h2 {
       color: #262332;
       font-size: 45px;
       font-weight: 800;
       line-height: 60px;
       letter-spacing: 1px;
+      margin: 5px 0 21px 0;
     }
     p {
       color: #262332;
       font-size: 20px;
-      font-weight: 400;
+      font-weight: 500;
       line-height: 30px;
+      padding: 0 172px 0 0;
     }
     ul {
       list-style-type: none;
@@ -308,7 +323,7 @@
   align-items: center;
   min-height: 100vh;
   text-align: center;
-
+  padding: 205px 0;
   .title {
     h2 {
       color: #262332;
@@ -317,7 +332,7 @@
       line-height: 60px;
       text-align: center;
       letter-spacing: 1px;
-      margin-bottom: 60px;
+      margin-bottom: 80px;
     }
   }
   .rw-inner {
@@ -328,6 +343,10 @@
     background: #f5f5f5;
     position: relative;
     z-index: 1;
+    p {
+      margin: 0 104px;
+    }
+
     &::after {
       content: "";
       position: absolute;
@@ -342,10 +361,22 @@
       height: 20px;
     }
   }
+  h3 {
+    font-weight: bold;
+  }
+  small {
+    font-weight: 500;
+  }
 }
 .logo {
   filter: none !important;
 }
 .c-p {
   filter: none !important;
+}
+.lts {
+  padding: 180px 0;
+  h2 {
+    margin-bottom: 60px;
+  }
 }
