--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -82,7 +82,7 @@
               </div>
             </li>
           </ul>
-          <a href="javascript:void(0)" class="btn btn-main">Contact us →</a>
+          <a [routerLink]="['/contact']" class="btn btn-main">Contact us →</a>
         </div>
       </div>
     </div>
