--- a/src/app/pages/about/about.component.scss
+++ b/src/app/pages/about/about.component.scss
@@ -29,20 +29,13 @@ a.btn.btn-main {
   }
 }
 .work-with-us {
-  background-image: url(../../../assets/images/wwu.svg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  min-height: 100vh;
-  padding: 0 0 100px 0;
-  display: flex;
-  align-items: center;
-  background-position: left;
+  padding: 200px 0 200px 0;
 
   p {
     color: #262332;
     font-size: 20px;
     font-weight: 400;
-    line-height: 30px;
+    line-height: 26px;
     max-width: 400px;
   }
   .tts {
@@ -51,6 +44,8 @@ a.btn.btn-main {
       font-size: 24px;
       font-weight: 400;
       line-height: 32px;
+      margin-right: 76px;
+      margin-bottom: 0;
     }
     ul {
       list-style-type: none;
@@ -61,7 +56,6 @@ a.btn.btn-main {
         .icons {
           margin-right: 15px;
         }
-
         p {
           color: #262332;
           font-size: 24px;
@@ -69,6 +63,9 @@ a.btn.btn-main {
           line-height: 32px;
         }
       }
+    }
+    a {
+      margin-left: 26px;
     }
   }
 }
@@ -103,5 +100,17 @@ a.btn.btn-main {
     line-height: 30px;
     text-align: center;
     margin-bottom: 40px;
+  }
+}
+
+.lts {
+  // padding: 180px 0;
+  h2 {
+    margin-bottom: 60px;
+    line-height: 52px;
+  }
+  a {
+    margin-bottom: 29px;
+    display: inline-block;
   }
 }
