--- a/src/app/pages/application/application.component.html
+++ b/src/app/pages/application/application.component.html
@@ -130,7 +130,6 @@
                 *ngIf="
                   formName.experience.invalid && formName.experience.touched
                 "
-                class="invalid-feedback"
               >
                 <div *ngIf="formName.experience.errors.required">
                   <mat-error>Total experience is required</mat-error>
@@ -211,7 +210,7 @@
               </textarea>
               <div *ngIf="formName.letter.invalid && formName.letter.touched">
                 <div *ngIf="formName.letter.errors.required">
-                  Short cover letter is required
+                  <mat-error> Short cover letter is required</mat-error>
                 </div>
               </div>
             </div>
