--- a/src/app/pages/job-listing/job-listing.component.scss
+++ b/src/app/pages/job-listing/job-listing.component.scss
@@ -44,27 +44,26 @@ a.btn.btn-main {
 }
 .job-details-inner {
   margin-top: 30px;
-  margin-bottom: 60px;
+  margin-bottom: 80px;
   h4 {
     font-style: normal;
     font-weight: 800;
     font-size: 45px;
-    line-height: 60px;
-    margin: 20px 0;
-
+    line-height: 52px;
+    margin: 50px 0 30px;
     letter-spacing: 1px;
-
     color: #172127;
   }
   ul {
     padding-left: 20px;
     list-style-type: none;
+    margin-bottom: 50px;
   }
   li {
     font-style: normal;
     font-weight: normal;
     font-size: 19px;
-    line-height: 30px;
+    line-height: 28px;
     /* or 150% */
     margin-bottom: 20px;
 
