--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -11,7 +11,7 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
-          <a href="javascript:void(0)" class="btn btn-main nav__link"
+          <a [routerLink]="['/about']" class="btn btn-main nav__link"
             >Lets get started →</a
           >
         </div>
@@ -516,7 +516,7 @@
       <div class="col-md-12">
         <div class="lts-inner">
           <h2>Lets start your project now</h2>
-          <a href="javascript:void(0)" class="btn-white-border"
+          <a [routerLink]="['/contact']" class="btn-white-border"
             >Contact us now →</a
           >
         </div>
