feat: add service component

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -32,23 +32,23 @@
                   >Contact</a
                 >
               </li>
-              <!-- <li>
-                <a (click)="hideMenu()" [routerLink]="['/service']">Services</a>
+              <li>
+                <a>Services</a>
                 <ul class="dropdown-menu">
                   <li>
-                    <a (click)="hideMenu()"  [routerLink]="['/']">Website</a>
+                    <a [routerLink]="['/website']">Website</a>
                   </li>
                   <li>
-                    <a (click)="hideMenu()"  [routerLink]="['/']">Mobile App</a>
+                    <a [routerLink]="['/mobile']">Mobile App</a>
                   </li>
                   <li>
-                    <a (click)="hideMenu()"  [routerLink]="['/']">SEO</a>
+                    <a [routerLink]="['/seo']">SEO</a>
                   </li>
                   <li>
-                    <a (click)="hideMenu()"  [routerLink]="['/']">Graphic Design</a>
+                    <a [routerLink]="['/graphic']">Graphic Design</a>
                   </li>
                 </ul>
-              </li> -->
+              </li>
               <!-- <li>
                 <a (click)="hideMenu()" [routerLink]="['/contact']">Contact</a>
               </li> -->
