--- a/src/app/pages/services/website/website.component.html
+++ b/src/app/pages/services/website/website.component.html
@@ -1,1 +1,234 @@
-<p>website works!</p>
+<!-- ********************Banner**************** -->
+<section class="sv-hero s1">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sv-hero-inner">
+          <svg width="152px" height="3px" viewBox="0 0 152 3" version="1.1">
+            <path
+              d="M0 0.5L150 0.5"
+              transform="translate(1 1)"
+              id="Path-4"
+              fill="none"
+              fill-rule="evenodd"
+              stroke="#FFFFFF"
+              stroke-width="2"
+              stroke-linecap="round"
+            />
+          </svg>
+          <h2 class="mt-3">
+            Website design plays a vital role in growing your business.
+          </h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ***************quotes*********************** -->
+<section class="website-feature">
+  <div class="container">
+    <div class="row justify-content-end">
+      <div class="col-md-6">
+        <div class="tssp">
+          <p>
+            Your website is the first impression for your customers so it should
+            be perfect by all the means. Websites developed and designed at
+            Ventonix are a synonym for Creativity, Innovation, and Precision.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="tts">
+          <ul>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>User-friendly any Custom website</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>B2B website & Catalogue website</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Static and Dynamic website</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Inquiry generation website</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Product display & and many more</h2>
+              </div>
+            </li>
+          </ul>
+          <a [routerLink]="['/contact']" class="btn btn-main">Get a quote →</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- *******************Benefits*************************** -->
+<section class="benefits">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="benefits-title">
+          <h2>How do we benefit you?</h2>
+          <p>
+            We provide you the best reliable solutions to your business ideas
+            and turning them into user-interface that helps your website reach
+            the customers.
+          </p>
+        </div>
+        <div class="benefits-list">
+          <ul>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Perfect Coding</h4>
+                <p>
+                  Websites designed and developed at Ventonix are hand-coded
+                  with W3C validations XHTML/CSS.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Stable and Secure</h4>
+                <p>
+                  The website is built and coded by a group of expert members.
+                  So they are powerful, stable and secure
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Responsive Design</h4>
+                <p>
+                  Websites may not run smoothly on the multiple platforms, we
+                  overcome it by making websites responsive.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Cost Effective Development</h4>
+                <p>
+                  We provide you the website with affordable charges at
+                  competitive prices maintaining competency.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Graphics Support</h4>
+                <p>
+                  Web development services provide you high support
+                  infrastructure for powerful 2D/3D graphics
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Customer Support</h4>
+                <p>
+                  We provide business ideas and user-interface that helps your
+                  website reach the customers.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ********************Recent Projects****************-->
+<app-recent-projects></app-recent-projects>
+
+<!-- ********************Appointment************ -->
+<app-online-appointment [data]="data"></app-online-appointment>
