--- a/src/app/pages/services/mobile-app/mobile-app.component.html
+++ b/src/app/pages/services/mobile-app/mobile-app.component.html
@@ -1,1 +1,218 @@
-<p>mobile-app works!</p>
+<!-- ********************Banner**************** -->
+<section class="sv-hero s1">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sv-hero-inner">
+          <svg width="152px" height="3px" viewBox="0 0 152 3" version="1.1">
+            <path
+              d="M0 0.5L150 0.5"
+              transform="translate(1 1)"
+              id="Path-4"
+              fill="none"
+              fill-rule="evenodd"
+              stroke="#FFFFFF"
+              stroke-width="2"
+              stroke-linecap="round"
+            />
+          </svg>
+          <h2 class="mt-3">Awesome Apps for your awesome business!</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ***************quotes*********************** -->
+<section class="website-feature">
+  <div class="container">
+    <div class="row justify-content-end">
+      <div class="col-md-6">
+        <div class="tssp">
+          <p>
+            Business application is the most important aspect of any business.
+            Get exposed to masses with your own business application.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="tts">
+          <ul>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Android & iPhone support</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Online & offline applications</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Cloud based user data storage</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Social login & share integration</h2>
+              </div>
+            </li>
+          </ul>
+          <a [routerLink]="['/contact']" class="btn btn-main">Get a quote →</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- *******************Benefits*************************** -->
+<section class="benefits">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="benefits-title">
+          <h2>Features that just work...</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div class="benefits-list">
+          <ul>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Android / iPhone</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Cloud Based</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Online / Offline Support</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Social Integrated</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>High Quality</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Multi Device</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ********************Recent Projects****************-->
+<app-recent-projects></app-recent-projects>
+
+<!-- ********************Appointment************ -->
+<app-online-appointment [data]="data"></app-online-appointment>
