--- a/src/app/shared/components/online-appointment/online-appointment.component.scss
+++ b/src/app/shared/components/online-appointment/online-appointment.component.scss
@@ -1,8 +1,17 @@
 .lts {
   padding: 180px 0;
   h2 {
-    margin-bottom: 60px;
+    margin-bottom: 40px;
     text-align: center;
     padding: 0 4%;
+  }
+  p {
+    color: #ffffff;
+    font-size: 20px;
+    letter-spacing: 0;
+    line-height: 30px;
+    text-align: center;
+    margin: 0px 0 60px;
+    padding: 0% 21%;
   }
 }
