feat : seo page

--- a/src/app/pages/services/seo/seo.component.html
+++ b/src/app/pages/services/seo/seo.component.html
@@ -1,1 +1,283 @@
-<p>seo works!</p>
+<!-- ********************Banner**************** -->
+<section class="sv-hero s1">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sv-hero-inner">
+          <svg width="152px" height="3px" viewBox="0 0 152 3" version="1.1">
+            <path
+              d="M0 0.5L150 0.5"
+              transform="translate(1 1)"
+              id="Path-4"
+              fill="none"
+              fill-rule="evenodd"
+              stroke="#FFFFFF"
+              stroke-width="2"
+              stroke-linecap="round"
+            />
+          </svg>
+          <h2 class="mt-3">Search Engine Optimization</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ***************quotes*********************** -->
+<section class="website-feature">
+  <div class="container">
+    <div class="row justify-content-end">
+      <div class="col-md-6">
+        <div class="tssp">
+          <p>
+            SEO(Search Engine Optimization) for any website has become a
+            necessity for any business to differentiate from others in the
+            market.
+          </p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="tts">
+          <ul>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Social marketing</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>E-mail marketing</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Bulk SMS marketing</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Google Adwords & many more.</h2>
+              </div>
+            </li>
+          </ul>
+          <a [routerLink]="['/contact']" class="btn btn-main">Get a quote →</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- *******************Benefits*************************** -->
+<section class="benefits">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="benefits-title">
+          <h2>Features that just work...</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua.
+          </p>
+        </div>
+        <div class="benefits-list">
+          <ul>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Onsite SEO</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt u
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Offsite SEO</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>White hat SEO</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Keyword Research</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Content writing</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut.
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Google Adwords</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut.
+                </p>
+              </div>
+            </li>
+
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Social Media Marketing</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt u
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h4>Content marketing</h4>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut.
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- *****************How Do we benefit you ********************* -->
+<section>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="isBenefits">
+          <h2>How do we benefit you?</h2>
+          <p>
+            Performing this helps your website to a rank page on the search
+            engine so that it catches viewer’s eye.Many clients come to us with
+            high-priced web development, media advertising or great website
+            designs. Yet, they don’t understand why the site does not show on
+            the first pages of the search engines. Don’t let this happen to your
+            company. Ventonix will help you all the way with your problems.
+          </p>
+          <p>
+            We have many years of experience in SEO and Marketing, we are best
+            in branding your company name all around. We boost your business
+            through advertisement on the digital medium by providing services
+            like SEO, Social marketing, E-mail marketing, Bulk SMS marketing,
+            Google Adwords and many more. We have a dedicated team of digital
+            marketing and they will provide search reports for your website with
+            your competitor website. We implement latest techniques to help you
+            to stay competing in this digitized world.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ********************Recent Projects****************-->
+<app-recent-projects></app-recent-projects>
+
+<!-- ********************Appointment************ -->
+<app-online-appointment [data]="data"></app-online-appointment>
