feat: add graphic page

--- a/src/app/pages/services/graphic/graphic.component.html
+++ b/src/app/pages/services/graphic/graphic.component.html
@@ -1,1 +1,287 @@
-<p>graphic works!</p>
+<!-- ********************Banner**************** -->
+<section class="sv-hero s1">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="sv-hero-inner">
+          <svg width="152px" height="3px" viewBox="0 0 152 3" version="1.1">
+            <path
+              d="M0 0.5L150 0.5"
+              transform="translate(1 1)"
+              id="Path-4"
+              fill="none"
+              fill-rule="evenodd"
+              stroke="#FFFFFF"
+              stroke-width="2"
+              stroke-linecap="round"
+            />
+          </svg>
+          <h2 class="mt-3">Wide range of designs and user-interfaces</h2>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ***************quotes*********************** -->
+<section class="website-feature">
+  <div class="container">
+    <div class="row justify-content-end">
+      <div class="col-md-6">
+        <div class="tssp">
+          <p>
+            A word that helps you to build your brand. A logo is a symbol icon
+            with logo text or image that helps your customer identify your
+            products in the market. At Ventonix we help you to build a logo that
+            helps you build long-term customer loyalty. We provide you the
+            custom logos that are original and helps build a winning brand.We
+            provide website design services consisting wireframes, layouts, and
+            sitemap among others that you need for the online store
+          </p>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <div class="tts">
+          <ul>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Social marketing</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>E-mail marketing</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Bulk SMS marketing</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Google Adwords & many more.</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>E-mail marketing</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Bulk SMS marketing</h2>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../../../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+              </div>
+              <div class="content">
+                <h2>Google Adwords & many more.</h2>
+              </div>
+            </li>
+          </ul>
+          <a [routerLink]="['/contact']" class="btn btn-main">Get a quote →</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- *******************Benefits*************************** -->
+<section class="Specilize">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="Specilize-title">
+          <h2>We specialize at</h2>
+          <p>
+            Ventonix is an imaginative designing company, specializing in
+            various fields like Logo Design, Website Design, Mockups, Banner
+            Design, Stationery Design, Brochure & Flyer design. We have a team
+            of experienced designers that provides you clean and professional
+            artwork.
+          </p>
+        </div>
+        <div class="Specilize-list">
+          <ul>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Logo Design</h4>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Banner Design</h4>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Stationary Design</h4>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Brochure & Flyer Design</h4>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Ads Banner and Posters</h4>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Letterpress Business Cards</h4>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Visiting Card Design</h4>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Envelope and Postcard Designs</h4>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Infographics</h4>
+              </div>
+            </li>
+
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Label & Advertising Designs</h4>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Motion Graphics</h4>
+              </div>
+            </li>
+            <li>
+              <div class="icons">
+                <img
+                  src="../assets/images/icon1.svg"
+                  class="img-fluid"
+                  alt=""
+                />
+                <h4>Catalog Designs</h4>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- ********************Recent Projects****************-->
+<app-recent-projects></app-recent-projects>
+
+<!-- ********************Appointment************ -->
+<app-online-appointment [data]="data"></app-online-appointment>
